[package]
name = "Eleanor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun = { version = "0.5.3", features = ["async"] }
smoltcp = "0.8.1"
tokio = { version = "1.20.0", features = ["full"] }
ipnet = "2.5.0"
env_logger = "0.9.0"
log = "0.4.17"
futures-core = "0.3.21"
tokio-util = "0.7.3"
spin = { version = "0.9" }
libc = "0.2"
byte_string = "1.0"
async-trait = "0.1"
sha2 = "0.10.2"
bytes = "1.2.0"
tokio-rustls = "0.23.4"
webpki-roots = "0.22.4"
